2009-07-27  Matthew Mundell <mmundell@intevation.de>

	* libopenvas/openvas_logging.c (level_int_from_string): New function.
	(load_log_configuration): Look for level names and integers when parsing
	the "level" key.

2009-07-27  Matthew Mundell <mmundell@intevation.de>

	* libopenvas/openvas_logging.c: Improve spacing.  Remove @returns from
	void functions.  Make comment formats more consistent.  Shorten some
	comment lines.  Space @params as in other modules.

	* libopenvas/openvas_logging.h: Improve spacing.  Remove function
	descriptions.
	(openvasd_logging): Doxyfy docs.

2009-07-27  Matthew Mundell <mmundell@intevation.de>

	* libopenvas/openvas_logging.c, libopenvas/openvas_logging.h: Convert
	tabs to spaces.

2009-07-27  Laban Mwangi <lmwangi@penguinlabs.co.ke>

	* libopenvas/openvas_logging.c:
	Indentation fixes.
	* libopenvas/openvas_logging.h:
	Indentation fixes.

2009-07-24  Michael Meyer <mime@gmx.de>

	* libopenvas/plugutils.c:
	Added line break to debug message because without it was not
	realy readable.

2009-07-24  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* libopenvas/Makefile:
	Thankfully applied patch of Stephan Kleine that closes bug 1037
	( http://bugs.openvas.org/1037 ).

2009-07-20  Matthew Mundell <mmundell@intevation.de>

	* libopenvas/openvas_logging.c (openvas_log_func): Change the timeformat
	hour-minute-second separators, so that log_separator is unique.  Remove
	log_separator from the initialisation of "prepend", as prepend_buf always
	starts with the log separator.  Add a NULL guard to the creation of
	logstr.  Remove the newline from the stderr output case, so that it works
	the same as the channel case.
	(setup_log_handlers): Remove the openvasmd entry, which belongs in the
	manager.

2009-07-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Add mandatory_keys to plugin arglist structure. This is part of
	implementing Change Request #39,
	http://www.openvas.org/openvas-cr-39.html.
