@@ -1,3 +1,8 @@
+2009-07-27  Laban Mwangi <lmwangi@penguinlabs.co.ke>
+
+	* libopenvas/openvas_logging.c, libopenvas/openvas_logging.h:
+	Consistency in variable names.
+
 2009-07-27  Matthew Mundell <mmundell@intevation.de>
 
 	* libopenvas/openvas_logging.c (level_int_from_string): New function.
